--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
