--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=mariSQL66441
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
